--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,11 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "proxy": "http://localhost:5000",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
+    "build": "npm i",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
